[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "queuectl"
version = "0.1.0"
description = "A CLI-based background job queue with retries, DLQ, and scheduling"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "QueueCtl Team", email = "team@queuectl.dev"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.9.0",
    "sqlalchemy>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.92.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
queuectl = "queuectl.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["queuectl*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=queuectl --cov-report=term-missing"
